--- a/ui/scss/themes/dark.scss
+++ b/ui/scss/themes/dark.scss
@@ -55,6 +55,7 @@
   --color-input-placeholder: #f4f4f5;
   --color-input-bg: #5d6772;
   --color-input-bg-copyable: #434b53;
+  --color-input-bg-hover: #444444;
   --color-input-border: var(--color-border);
   --color-input-border-active: var(--color-secondary);
 
